# temperature-sensor

./: Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config
src/: main.rs
