[package]
name = "temperature-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-32768hz",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "defmt",
    "unstable-pac",
    "stm32l433rc",
    "time-driver-any",
    "exti",
    "unstable-traits",
] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
log = "0.4.17"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "integrated-timers",
    "std",
] }

[target.'cfg(target_os = "none")'.dependencies]

[profile.release]
debug = 2
opt-level = "s"
